--- a/ChatChat/Base.lproj/Main.storyboard
+++ b/ChatChat/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -180,10 +180,45 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="94N-Ml-0XY"/>
+                    <connections>
+                        <segue destination="fiI-LI-Av7" kind="show" identifier="showImage" id="HcE-kR-SzI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bTP-1r-Xjb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2640" y="389"/>
+        </scene>
+        <!--Show Image View Controller-->
+        <scene sceneID="Pek-jI-P5V">
+            <objects>
+                <viewController id="fiI-LI-Av7" customClass="ShowImageViewController" customModule="ChatChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ykP-Kq-78T"/>
+                        <viewControllerLayoutGuide type="bottom" id="BzT-AK-3fs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="B0b-eY-ChN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rRw-8K-91X">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BzT-AK-3fs" firstAttribute="top" secondItem="rRw-8K-91X" secondAttribute="bottom" id="chp-Wd-hj0"/>
+                            <constraint firstAttribute="trailing" secondItem="rRw-8K-91X" secondAttribute="trailing" id="vqW-NW-euy"/>
+                            <constraint firstItem="rRw-8K-91X" firstAttribute="top" secondItem="B0b-eY-ChN" secondAttribute="top" id="yMl-qX-AcS"/>
+                            <constraint firstItem="rRw-8K-91X" firstAttribute="leading" secondItem="B0b-eY-ChN" secondAttribute="leading" id="yqn-mx-ceC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="rRw-8K-91X" id="KPS-Bn-1zh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZOJ-M0-QCU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3290.4000000000001" y="397.15142428785612"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="emB-h0-MiE">
