--- a/ChatChat/Base.lproj/Main.storyboard
+++ b/ChatChat/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -181,10 +181,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="94N-Ml-0XY"/>
                     <connections>
+                        <outlet property="chatViewModel" destination="i6Y-oC-O6w" id="rnS-xC-DJy"/>
+                        <outlet property="firebaseClient" destination="VfJ-jA-183" id="VA3-gK-kXr"/>
                         <segue destination="fiI-LI-Av7" kind="show" identifier="showImage" id="HcE-kR-SzI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bTP-1r-Xjb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="VfJ-jA-183" customClass="FirebaseClient" customModule="ChatChat" customModuleProvider="target"/>
+                <customObject id="i6Y-oC-O6w" customClass="ChatViewModel" customModule="ChatChat" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="2640" y="389"/>
         </scene>
